# tachyon

./: .gitignore  .markdownlint.jsonc  Cargo.toml  README.md  book.toml  clippy.toml  justfile  macros.txt  mermaid-init.js  rust-toolchain.toml  rustfmt.toml
.github/actions/rust-nightly-setup/: action.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: book.yml  ci.yml  rust.yml  zizmor.yml
book/: FIXME.md  book.toml  macros.txt
book/.github/workflows/: notify-website.yml
book/src/: SUMMARY.md  aggregation.md  anchor.md  authorization.md  bundle.md  domain-separators.md  keys.md  notes.md  nullifier-derivation.md  nullifiers.md  proof-pipeline.md  proof-tree.md  revisit.md  tachygrams.md  transaction-identifiers.md
book/src/network_roles/: overview.md
book/src/zips/: network-upgrade-deployment.md  oss.md  tachyon-accumulator.md  tachyon-aggregator.md  tachyon-bundle.md  tachyon-shielded-protocol.md  tachyon-zips.md  zip-209.md  zip-221.md  zip-244.md  zip-248.md  zip-317.md
crates/mimc/: Cargo.toml
crates/mimc/src/: lib.rs  tests.rs
crates/mimc/src/spec/: tachyon.rs
crates/mimc/src/specs/: mod.rs  tachyon.rs  tachyon_constants.py
crates/mimc/tests/spec/: main.rs  tachyon.rs
crates/mock_ragu/: Cargo.toml
crates/mock_ragu/src/: application.rs  ctx.rs  error.rs  gadgets.rs  generators.rs  header.rs  hooks.rs  lib.rs  polynomial.rs  proof.rs  relations.rs  step.rs  tests.rs
crates/mock_ragu/src/tests/: application.rs  gadgets.rs  mod.rs  polynomial.rs  proof.rs  relations.rs
crates/tachyon/: Cargo.toml
crates/tachyon/fuzz/: .gitignore  Cargo.toml  README.md
crates/tachyon/fuzz/corpus/bundle_read/: regression_alloc_near_cap
crates/tachyon/fuzz/corpus/stripped_bundle_read/: regression_alloc_near_cap
crates/tachyon/fuzz/fuzz_targets/: bundle_read.rs  stamped_bundle_read.rs  stripped_bundle_read.rs
crates/tachyon/src/: accumulator.rs  action.rs  bundle.rs  constants.rs  custody.rs  entropy.rs  fixtures.rs  ggm.rs  lib.rs  note.rs  poseidon.rs  proof.rs  reddsa.rs  relations.rs  serialization.rs  stamp.rs  test_support.rs  testing.rs  value.rs  witness.rs
crates/tachyon/src/bundle/: mod.rs  tests.rs
crates/tachyon/src/circuit/: header.rs  mod.rs  step.rs  witnesses.rs
crates/tachyon/src/digest/: blake2b.rs  mimc.rs  mod.rs  poseidon.rs
crates/tachyon/src/keys/: custody.rs  delegate.rs  ggm.rs  mod.rs  note.rs  planner.rs  private.rs  proof.rs  public.rs  randomizer.rs  redpallas.rs  signature.rs
crates/tachyon/src/nullifier/: derivation.rs  mimc.rs  mod.rs  trace.rs
crates/tachyon/src/primitives/: action_digest.rs  anchor.rs  block_commit.rs  block_height.rs  chain_hash.rs  delegation_id.rs  effect.rs  epoch.rs  internal.rs  mod.rs  multiset.rs  note_id.rs  polynomial.rs  pool_chain.rs  pool_commit.rs  seq.rs  set_commit.rs  sets.rs  spend.rs  subblock.rs  tachygram.rs  tachygram_digest.rs  trace.rs
crates/tachyon/src/relations/: enforce.rs  mod.rs  quotient.rs
crates/tachyon/src/serialization/: compactsize.rs  mod.rs
crates/tachyon/src/stamp/: batch.rs  block.rs  coverage.rs  delegation.rs  exclusion.rs  header.rs  mod.rs  pool.rs  proof.rs  spend.rs  spendable.rs  tests.rs
crates/tachyon/src/stamp/proof/: delegation.rs  header.rs  mod.rs  pool.rs  spend.rs  spendable.rs  stamp.rs  tests.rs  unspent.rs
src/: ArithmeticCircuits.md  CircuitModel.md  CircuitPolynomials.md  LinearConstraints.md  MultiplicationConstraints.md  Ragu.md  RecursionExplanation.md  SUMMARY.md  StagingPolynomials.md  StructuredVector.md  VerificationConsolidated.md  revdot.md
tachyon/src/: action.rs  bundle.rs  note.rs  proof.rs  witness.rs
tachyon/src/keys/: mod.rs  note.rs  private.rs  proof.rs  signature.rs
tachyon/src/primitives/: mod.rs  tachygram.rs
