[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = { level = "forbid", priority = -1 }
rust_2024_compatibility = { level = "forbid", priority = -1 }

non_ascii_idents = "forbid"

let_underscore_drop = "deny"

elided_lifetimes_in_paths = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

unwrap_in_result = "forbid"

doc_markdown = "allow"       # https://github.com/rust-lang/rust-clippy/issues/7273
missing_errors_doc = "allow"
missing_panics_doc = "allow"

panic = "warn"
print_stderr = "warn"
print_stdout = "warn"

unwrap_used = "deny"

# restrictions
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
as_conversions = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
cognitive_complexity = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
expect_used = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
float_arithmetic = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
little_endian_bytes = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_trait_methods = "deny"
mixed_read_write_in_expression = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
non_zero_suggestions = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
pointer_format = "deny"
precedence_bits = "deny"
pub_use = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
separated_literal_suffix = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
single_char_lifetime_names = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

# deny later
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
missing_inline_in_public_items = "allow"
todo = "allow"
unimplemented = "allow"
