[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
# --- safety & correctness ---
missing_debug_implementations = "warn"
missing_docs = "warn"
let_underscore_drop = "deny"
non_ascii_idents = "forbid"
keyword_idents = { level = "forbid", priority = -1 }
elided_lifetimes_in_paths = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

# --- future-proofing ---
future_incompatible = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# --- nuclear option: start from the top ---
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

todo = "allow"

unwrap_used = "warn"
panic = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
mem_forget = "deny"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
fn_to_numeric_cast_any = "deny"
as_conversions = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
needless_pass_by_value = "warn"
str_to_string = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
used_underscore_binding = "warn"
verbose_file_reads = "warn"
wildcard_imports = "deny"

# --- allow a few pedantic ones that are more noise than signal ---
module_name_repetitions = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"           # https://github.com/rust-lang/rust-clippy/issues/7273
expect_used = "allow"
#must_use_candidate = "warn"

# --- dependencies ---
multiple_crate_versions = "warn"

[workspace.dependencies]
blake2b_simd = "1.0"
rand = "0.8"
ff = "0.13"
group = "0.13"
proptest = "1.7.0"
pasta_curves = "0.5.1"
