[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.90"

# dependency opt level matters for fft performance in tests
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = { level = "forbid", priority = -1 }
rust_2024_compatibility = { level = "forbid", priority = -1 }

non_ascii_idents = "forbid"

let_underscore_drop = "deny"

elided_lifetimes_in_paths = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
redundant_explicit_links = "deny"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

cast_possible_truncation = "deny"
expect_used = "deny" # allowed in tests via clippy.toml

doc_markdown = "allow"              # https://github.com/rust-lang/rust-clippy/issues/7273
default_numeric_fallback = "allow"  # would demand a literal suffix at every untyped literal
unreachable = "allow"               # awkward to disable
redundant_pub_crate = "allow"       # pub(crate) in private modules is fine
little_endian_bytes = "allow"       # many specified conversions

alloc_instead_of_core = "forbid"
allow_attributes = "forbid"
allow_attributes_without_reason = "forbid"
as_pointer_underscore = "forbid"
as_underscore = "forbid"
default_union_representation = "forbid"
deref_by_slicing = "forbid"
disallowed_script_idents = "forbid"
else_if_without_else = "forbid"
error_impl_error = "forbid"
exit = "forbid"
float_arithmetic = "forbid"
float_cmp_const = "forbid"
fn_to_numeric_cast_any = "forbid" 
get_unwrap = "forbid" 
inline_asm_x86_att_syntax = "forbid"
inline_asm_x86_intel_syntax = "forbid"
lossy_float_literal = "forbid"
mem_forget = "forbid" 
multiple_unsafe_ops_per_block = "forbid" 
non_ascii_literal = "forbid"
panic_in_result_fn = "forbid" 
rc_buffer = "forbid"
rc_mutex = "forbid"
return_and_then = "forbid"
shadow_reuse = "forbid"
shadow_same = "forbid"
shadow_unrelated = "forbid"
single_char_lifetime_names = "forbid"
std_instead_of_alloc = "forbid"
std_instead_of_core = "forbid"
string_slice = "forbid" 
suspicious_xor_used_as_pow = "forbid"
tests_outside_test_module = "forbid"
undocumented_unsafe_blocks = "forbid" 
unused_result_ok = "forbid"
unwrap_in_result = "forbid" 
unwrap_used = "forbid" 
wildcard_enum_match_arm = "forbid"

absolute_paths = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
cognitive_complexity = "deny"
create_dir = "deny"
decimal_literal_representation = "deny"
doc_include_without_cfg = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
filetype_is_file = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
infinite_loop = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_zero_suggestions = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
pointer_format = "deny"
precedence_bits = "deny"
pub_use = "deny"
pub_without_shorthand = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
separated_literal_suffix = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
try_err = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unused_trait_names = "deny"
use_debug = "deny"
verbose_file_reads = "deny"

# allow, deny later
multiple_crate_versions = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
missing_inline_in_public_items = "allow"
todo = "allow"
unimplemented = "allow"

# warn, deny later
as_conversions = "warn"
dbg_macro = "warn"
panic = "warn"

# warn, forbid later
missing_panics_doc = "warn"
missing_errors_doc = "warn"

# deny, forbid later
indexing_slicing = "deny" 
integer_division_remainder_used = "deny"
wrong_self_convention = "deny"