[package]
categories = [
    "cryptography::cryptocurrencies",
]
description = """
MiMC block cipher over the Pallas base field for Tachyon
"""
keywords = [
    "zcash",
    "tachyon",
    "mimc",
]
name = "zcash_mimc"
version = "0.0.0"

documentation = "https://docs.rs/zcash_mimc"
readme = "README.md"
repository = "https://github.com/tachyon-zcash/tachyon"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = [
    "std",
]
std = [
    "blake2b_simd/std",
]

[lints]
workspace = true

[dependencies]
blake2b_simd = { version = "1.0", default-features = false }
ff = "0.13"
lazy_static = { version = "1", default-features = false, features = [
    "spin_no_std",
] }
pasta_curves = "0.5.1"

[dev-dependencies]
rand = "0.8"

[lib]
bench = false
