[package]
categories = [
    "cryptography::cryptocurrencies",
]
description = """
WIP
"""
keywords = [
    "zcash",
    "tachyon",
]
name = "zcash_tachyon"
version = "0.0.0"

documentation = "https://docs.rs/zcash_tachyon"
readme = "README.md"
repository = "https://github.com/tachyon-zcash/tachyon"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = [
    "std",
]
std = [
    "blake2b_simd/std",
    "ragu/std",
    "reddsa/std",
    "corez/std",
    "ragu/multicore",
]

[lints]
workspace = true

[dependencies]
blake2b_simd = { version = "1.0", default-features = false }
corez = { version = "0.1.1", default-features = false, features = [
    "alloc",
] }
derive_more = { version = "~2.1", default-features = false, features = [
    "full", # todo: use more specific features
] }
ff = "0.13"
group = "0.13"
lazy_static = { version = "1", default-features = false, features = [
    "spin_no_std",
] }
pasta_curves = "0.5.1"
ragu = { git = "https://github.com/tachyon-zcash/ragu", rev = "2f926fdcb5f1d402ca06aad4230b16540367e850", default-features = false, features = [
    "mock",
    "legacy-deps",
] }

rand_core = { version = "0.6", default-features = false }
reddsa = { version = "0.5.1", default-features = false }

[dev-dependencies]
rand = "0.8"

[lib]
bench = false
